--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:watch": "vitest",
     "check": "biome check --write .",
     "type-check": "tsc -b",
-    "all": "bun check && bun test && bun type-check"
+    "all": "bun check && bun test && bun type-check",
+    "prepare": "husky"
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -24,6 +25,7 @@
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "globals": "^16.3.0",
+    "husky": "^9.1.7",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
     "vitest": "^3.2.4"
