--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:watch": "vitest",
     "check": "biome check --write .",
     "type-check": "tsc -b",
-    "all": "bun check && bun test && bun type-check",
+    "all": "bun check && bun run test && bun type-check",
     "prepare": "husky"
   },
   "dependencies": {
@@ -21,11 +21,14 @@
   "devDependencies": {
     "@biomejs/biome": "2.1.1",
     "@eslint/js": "^9.30.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
+    "jsdom": "^26.1.0",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
     "vitest": "^3.2.4"
