--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "test:watch": "vitest",
     "check": "biome check --write .",
     "type-check": "tsc -b",
-    "all": "bun check && bun run test && bun type-check",
-    "prepare": "husky"
+    "all": "bun check && bun run test && bun type-check && bun knip",
+    "prepare": "husky",
+    "knip": "knip"
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -20,15 +21,17 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.1",
-    "@eslint/js": "^9.30.1",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^24.0.12",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
-    "globals": "^16.3.0",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
+    "knip": "^5.61.3",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
     "vitest": "^3.2.4"
